@@ -96,6 +96,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25441: asyncio: Raise error from drain() when socket is closed.
+
 - Issue #25411: Improved Unicode support in SMTPHandler through better use of
   the email package. Thanks to user simon04 for the patch.
 
